<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
      	
  
  
  <modelVersion>4.0.0</modelVersion>
      	
  
  
  <groupId>com.dmtri</groupId>
      	
  
  
  <artifactId>prog_lab</artifactId>
      	
  
  
  <version>1.0-SNAPSHOT</version>
      	
  
  
  <packaging>pom</packaging>
      	
  
  
  <name>prog_lab</name>
      	
  
  
  <properties>
            		
    
    
    <maven.compiler.source>8</maven.compiler.source>
            		
    
    
    <maven.compiler.target>8</maven.compiler.target>
            		
    
    
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
            	
  
  
  </properties>
      	
  
  
  <build>
            		
    
    
    <plugins>
                  			
      
      
      <plugin>
                        				
        
        
        <groupId>org.apache.maven.plugins</groupId>
                        				
        
        
        <artifactId>maven-checkstyle-plugin</artifactId>
                        				
        
        
        <version>3.1.2</version>
                        				
        
        
        <configuration>
                              					
          
          
          <violationSeverity>warning</violationSeverity>
                              					
          
          
          <encoding>UTF-8</encoding>
                              					
          
          
          <configLocation>s_checks.xml</configLocation>
                              				
        
        
        </configuration>
                        				
        
        
        <executions>
                              					
          
          
          <execution>
                                    						
            
            
            <goals>
                                          							
              
              
              <goal>check</goal>
                                          						
            
            
            </goals>
                                    					
          
          
          </execution>
                              				
        
        
        </executions>
                        				
        
        
        <dependencies>
                              					
          
          
          <dependency>
                                    						
            
            
            <groupId>com.puppycrawl.tools</groupId>
                                    						
            
            
            <artifactId>checkstyle</artifactId>
                                    						
            
            
            <version>8.37</version>
                                    					
          
          
          </dependency>
                              				
        
        
        </dependencies>
                        			
      
      
      </plugin>
                  		
    
    
    </plugins>
            		
    
    
    <pluginManagement>
                  			
      
      
      <plugins>
                        				
        
        
        <plugin>
                              					
          
          
          <artifactId>maven-compiler-plugin</artifactId>
                              					
          
          
          <version>3.8.1</version>
                              				
        
        
        </plugin>
                        				
        
        
        <plugin>
                              					
          
          
          <groupId>org.apache.maven.plugins</groupId>
                              					
          
          
          <artifactId>maven-javadoc-plugin</artifactId>
                              					
          
          
          <version>3.2.0</version>

          <configuration>
            <javadocExecutable>C:/Program Files/Java/jdk-17.0.2/bin/javadoc</javadocExecutable>
          </configuration>	
        
        
        </plugin>
                        				
        
        
        <plugin>
                              					
          
          
          <groupId>org.apache.maven.plugins</groupId>
                              					
          
          
          <artifactId>maven-assembly-plugin</artifactId>
                              					
          
          
          <version>3.3.0</version>
                              				
        
        
        </plugin>
                        			
      
      
      </plugins>
                  		
    
    
    </pluginManagement>
            	
  
  
  </build>
      
  
  
  <modules>
              
    
    
    <module>lab-common</module>
              
    
    
    <module>lab-client</module>
          
    
    <module>lab-server</module>
      
  </modules>
    

</project>
